--- a/module3-solution/css/mod3styles.css
+++ b/module3-solution/css/mod3styles.css
@@ -16,6 +16,7 @@ body {
   padding: 0px 10px 0px 10px;
   border: 1px solid black;
   margin-bottom: 1.5%;
+  height: 1000px;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
